--- a/html/solar.html
+++ b/html/solar.html
@@ -188,7 +188,7 @@
         <a href="https://eng.libretexts.org/Bookshelves/Materials_Science/Supplemental_Modules_(Materials_Science)/Solar_Basics/D._P-N_Junction_Diodes/I._P-Type%2C_N-Type_Semiconductors"
             target="blank">
             <img class="left"
-                src="https://files.mtstatic.com/site_7337/3260/0?Expires=1715552937&Signature=BEjqDhQLG2vJxEQdCLnBP9EWnAI~SogFO6CNQ3gl0JWQo~UBx3ouogh7j3fmZE5N9qxyPQMFtvfmRBC~oeXHyd6xZs4Di04iu-Lef8jgb4tTh7N3bUpI52UiiDWhKweSiwW~D8-mDa1b~LXq-f8yQfJp-I4n9jF3bq~QvaSkHJo_&Key-Pair-Id=APKAJ5Y6AV4GI7A555NA"
+                src="https://files.mtstatic.com/site_7337/3260/0?Expires=1715871070&Signature=Imd4J-HhsCaSGf0WoC82MXh9JYRVIAnCuYeHvFP~sY6UmHLwEIs16K0RW9anmrGvD~XDNost8PrYM9ov7CwSRLTfwXx1QXLoxhw4Y0A62ykcHQO89YbsPDZPyP-MkAYB6o3dqzYeYgbNhqYLDV7xk7vNFRooHKTTST2KobzZOyM_&Key-Pair-Id=APKAJ5Y6AV4GI7A555NA"
                 alt="A visual representation of n-type doping." title="CLICK FOR SOURCE" style="width: 28%">
         </a>
     </div>
